[gd_scene load_steps=25 format=2]

[ext_resource path="res://scenes/map.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/navigation.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/objectsBase.gd" type="Script" id=3]
[ext_resource path="res://scenes/object.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Inventory.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/openDoor.gd" type="Script" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://scripts/map.gd" type="Script" id=8]
[ext_resource path="res://scripts/interactive.gd" type="Script" id=9]
[ext_resource path="res://scenes/ComputerLab.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/gas.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/bgWindow.png" type="Texture" id=12]
[ext_resource path="res://scripts/ComputerTwo.gd" type="Script" id=13]

[sub_resource type="Animation" id=1]
resource_name = "openDoor"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.375, 2.125 ), Vector2( 1e-05, 2.125 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 24 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/font/Inconsolata-VariableFont_wdth,wght.ttf"

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = SubResource( 3 )

[sub_resource type="Animation" id=8]
resource_name = "load"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 40 ), Vector2( 400, 40 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "load"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 40 ), Vector2( 400, 40 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "load"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 40 ), Vector2( 400, 40 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "load"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 40 ), Vector2( 400, 40 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10.2783, 51.3213 )

[node name="level" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ 2000.0 ]
}

[node name="map" parent="." instance=ExtResource( 1 )]
script = ExtResource( 8 )
position_in_map = Vector2( -500, -3500 )

[node name="objects" type="Node2D" parent="map"]
script = ExtResource( 3 )

[node name="object" parent="map/objects" instance=ExtResource( 4 )]
position = Vector2( 608, 3824 )

[node name="object3" parent="map/objects" instance=ExtResource( 4 )]
position = Vector2( 888, 3632 )

[node name="object4" parent="map/objects" instance=ExtResource( 4 )]
position = Vector2( 696, 3864 )

[node name="object2" parent="map/objects" instance=ExtResource( 4 )]
position = Vector2( 1000, 3584 )

[node name="ColorRect" type="Sprite" parent="map"]
position = Vector2( 1712, 200 )
scale = Vector2( 1.375, 2.125 )
z_index = -1
texture = ExtResource( 7 )
offset = Vector2( 32, 32 )
script = ExtResource( 6 )
nodeMap = NodePath("..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="map/ColorRect"]
anims/openDoor = SubResource( 1 )

[node name="navigation" type="Node2D" parent="map"]

[node name="door" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 1754.73, 270.85 )
scale = Vector2( 1.667, 0.631 )
posMap = Vector2( -500, -500 )
nodeMap = NodePath("../..")

[node name="door2" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 243.895, 744.529 )
scale = Vector2( 1.667, 0.593 )
posMap = Vector2( 0, -1000 )
nodeMap = NodePath("../..")

[node name="door3" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 1260.85, 744.529 )
scale = Vector2( 1.667, 0.593 )
block = true
posMap = Vector2( 0, -2000 )
nodeMap = NodePath("../..")

[node name="Particles2D" parent="map/navigation/door3" instance=ExtResource( 11 )]
position = Vector2( -2.9093, -257.216 )
scale = Vector2( 0.5, 3 )
emitting = false

[node name="Timer" type="Timer" parent="map/navigation/door3"]
wait_time = 3.0

[node name="door4" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 1756.98, 725.444 )
scale = Vector2( 3.634, 1.539 )
posMap = Vector2( -500, 0 )
nodeMap = NodePath("../..")

[node name="door5" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 884.419, 1221.46 )
scale = Vector2( 0.995, 0.834 )
posMap = Vector2( -1000, -500 )
nodeMap = NodePath("../..")

[node name="door6" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 1672, 1808 )
scale = Vector2( 2.897, 1.251 )
posMap = Vector2( 0, -2500 )
nodeMap = NodePath("../..")

[node name="door28" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 760, 1960 )
scale = Vector2( 8, 0.2 )
posMap = Vector2( -1500, -1500 )
nodeMap = NodePath("../..")

[node name="door29" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 1760, 1960 )
scale = Vector2( 8, 0.2 )
posMap = Vector2( -500, -1500 )
nodeMap = NodePath("../..")

[node name="door30" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 260.061, 2439.11 )
scale = Vector2( 8, 0.2 )
posMap = Vector2( -500, -2000 )
nodeMap = NodePath("../..")

[node name="door31" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 750.068, 2437.12 )
scale = Vector2( 8, 0.2 )
posMap = Vector2( 0, -2000 )
nodeMap = NodePath("../..")

[node name="door32" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 1262.05, 2437.11 )
scale = Vector2( 8, 0.2 )
posMap = Vector2( -1500, -2000 )
nodeMap = NodePath("../..")

[node name="door33" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 1766.05, 2429.11 )
scale = Vector2( 8, 0.2 )
posMap = Vector2( -1000, -2000 )
nodeMap = NodePath("../..")

[node name="door26" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 250.637, 1749.03 )
scale = Vector2( 1.667, 0.593 )
posMap = Vector2( -1000, -4000 )
nodeMap = NodePath("../..")

[node name="door7" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 1840, 1808 )
scale = Vector2( 2.8, 1.2 )
posMap = Vector2( 0, -3000 )
nodeMap = NodePath("../..")

[node name="door8" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 1260.58, 1790.8 )
scale = Vector2( 2.242, 0.855 )
posMap = Vector2( -1500, -2000 )
nodeMap = NodePath("../..")

[node name="door9" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 664, 1808 )
scale = Vector2( 2.8, 1.2 )
posMap = Vector2( 0, -3500 )
nodeMap = NodePath("../..")

[node name="door10" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 840, 1808 )
scale = Vector2( 2.8, 1.2 )
posMap = Vector2( 0, -4000 )
nodeMap = NodePath("../..")

[node name="door11" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 255.12, 2293.9 )
scale = Vector2( 2.601, 0.875 )
posMap = Vector2( -1000, -2000 )
nodeMap = NodePath("../..")

[node name="door12" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 753.871, 2291.66 )
scale = Vector2( 2.6, 0.8 )
posMap = Vector2( 0, -500 )
nodeMap = NodePath("../..")

[node name="door13" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 1251.87, 2248.63 )
scale = Vector2( 1.667, 0.593 )
posMap = Vector2( 0, -1500 )
nodeMap = NodePath("../..")

[node name="door14" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 1754.73, 2248.63 )
scale = Vector2( 1.667, 0.593 )
posMap = Vector2( -500, -2000 )
nodeMap = NodePath("../..")

[node name="door15" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 42.1043, 2713.33 )
scale = Vector2( 1.215, 1.185 )
posMap = Vector2( -500, -2500 )
nodeMap = NodePath("../..")

[node name="door16" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 754.73, 2928.84 )
scale = Vector2( 8, 0.2 )
posMap = Vector2( 0, -2500 )
nodeMap = NodePath("../..")

[node name="door27" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 300, 2928.84 )
scale = Vector2( 8, 0.2 )
posMap = Vector2( -500, -1500 )
nodeMap = NodePath("../..")

[node name="door17" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 245.447, 3406.9 )
scale = Vector2( 8, 0.2 )
posMap = Vector2( -500, -1500 )
nodeMap = NodePath("../..")

[node name="door18" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 700.132, 3404.52 )
scale = Vector2( 8, 0.2 )
posMap = Vector2( 0, -3000 )
nodeMap = NodePath("../..")

[node name="door19" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 1232.49, 3402.41 )
scale = Vector2( 8, 0.2 )
posMap = Vector2( 0, -3000 )
nodeMap = NodePath("../..")

[node name="door20" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 1758.12, 3409.28 )
scale = Vector2( 8, 0.2 )
posMap = Vector2( 0, -3000 )
nodeMap = NodePath("../..")

[node name="door21" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 232, 3952 )
scale = Vector2( 8, 0.2 )
posMap = Vector2( -1500, -1500 )
nodeMap = NodePath("../..")

[node name="door35" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 192, 3752 )
scale = Vector2( 1.5, 0.2 )
posMap = Vector2( -500, -3500 )
nodeMap = NodePath("../..")

[node name="door22" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 704.481, 3946.8 )
scale = Vector2( 8, 0.2 )
posMap = Vector2( 0, -3500 )
nodeMap = NodePath("../..")

[node name="door23" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 209.771, 4436.75 )
scale = Vector2( 8, 0.2 )
posMap = Vector2( -1500, -1500 )
nodeMap = NodePath("../..")

[node name="door24" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 464, 4256 )
scale = Vector2( 1.258, 1.184 )
posMap = Vector2( -500, -4000 )
nodeMap = NodePath("../..")

[node name="door34" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 528, 4256 )
scale = Vector2( 1.258, 1.184 )
posMap = Vector2( 0, -4000 )
nodeMap = NodePath("../..")

[node name="door25" parent="map/navigation" instance=ExtResource( 2 )]
position = Vector2( 1256.27, 4441.51 )
scale = Vector2( 8, 0.2 )
posMap = Vector2( 0, -1500 )
nodeMap = NodePath("../..")

[node name="interaction" type="Node2D" parent="map"]

[node name="interactive" type="Area2D" parent="map/interaction"]
position = Vector2( 1744, 1280 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}
name_node = "ComputerLab"
nodeNav = NodePath("../../../navigationCam")

[node name="CollisionShape2D" type="CollisionShape2D" parent="map/interaction/interactive"]
shape = SubResource( 2 )

[node name="ComputerLab" parent="map/interaction/interactive" instance=ExtResource( 10 )]
visible = false
pos = Vector2( 1500, 1000 )

[node name="ComputerTwo" type="Sprite" parent="map/interaction"]
position = Vector2( 674.903, 3638.13 )
scale = Vector2( 0.495898, 0.311755 )
texture = ExtResource( 12 )
script = ExtResource( 13 )

[node name="Computer" type="Control" parent="map/interaction/ComputerTwo"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="map/interaction/ComputerTwo/Computer"]
margin_left = -167.0
margin_top = -97.0
margin_right = 155.0
margin_bottom = 83.0
custom_fonts/normal_font = SubResource( 4 )
text = "Inserte chips  de carga"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="map/interaction/ComputerTwo/Computer"]
visible = false
margin_left = -167.0
margin_top = -20.0
margin_right = 172.0
margin_bottom = 57.0
custom_fonts/normal_font = SubResource( 6 )
text = "Cargando. . ."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="map/interaction/ComputerTwo/Computer/RichTextLabel2"]
one_shot = true

[node name="load" type="Control" parent="map/interaction/ComputerTwo/Computer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="RichTextLabel3" type="RichTextLabel" parent="map/interaction/ComputerTwo/Computer/load"]
margin_left = -118.78
margin_top = -173.63
margin_right = 139.22
margin_bottom = -45.6299
custom_fonts/normal_font = SubResource( 7 )
text = "Instalando software"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="map/interaction/ComputerTwo/Computer/load"]
margin_left = -199.442
margin_top = 5.99805
margin_right = -199.442
margin_bottom = 45.998
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="map/interaction/ComputerTwo/Computer/load/ColorRect"]
anims/load = SubResource( 8 )

[node name="ColorRect2" type="ColorRect" parent="map/interaction/ComputerTwo/Computer/load"]
margin_left = -199.442
margin_top = 57.3223
margin_right = -199.442
margin_bottom = 97.3223
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="map/interaction/ComputerTwo/Computer/load/ColorRect2"]
anims/load = SubResource( 9 )

[node name="ColorRect3" type="ColorRect" parent="map/interaction/ComputerTwo/Computer/load"]
margin_left = -199.442
margin_top = 108.644
margin_right = -199.442
margin_bottom = 148.644
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer3" type="AnimationPlayer" parent="map/interaction/ComputerTwo/Computer/load/ColorRect3"]
anims/load = SubResource( 10 )

[node name="ColorRect4" type="ColorRect" parent="map/interaction/ComputerTwo/Computer/load"]
margin_left = -199.442
margin_top = 159.966
margin_right = -199.442
margin_bottom = 199.966
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer4" type="AnimationPlayer" parent="map/interaction/ComputerTwo/Computer/load/ColorRect4"]
anims/load = SubResource( 11 )

[node name="slots" type="Node2D" parent="map/interaction/ComputerTwo"]

[node name="slot" type="Area2D" parent="map/interaction/ComputerTwo/slots" groups=[
"slots",
]]
position = Vector2( 365.19, 467.9 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="map/interaction/ComputerTwo/slots/slot"]
shape = SubResource( 5 )

[node name="slot2" type="Area2D" parent="map/interaction/ComputerTwo/slots" groups=[
"slots",
]]
position = Vector2( 445.852, 467.899 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="map/interaction/ComputerTwo/slots/slot2"]
shape = SubResource( 5 )

[node name="slot3" type="Area2D" parent="map/interaction/ComputerTwo/slots" groups=[
"slots",
]]
position = Vector2( 526.514, 467.9 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="map/interaction/ComputerTwo/slots/slot3"]
shape = SubResource( 5 )

[node name="slot4" type="Area2D" parent="map/interaction/ComputerTwo/slots" groups=[
"slots",
]]
position = Vector2( 591.043, 467.899 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="map/interaction/ComputerTwo/slots/slot4"]
shape = SubResource( 5 )

[node name="navigationCam" type="Node2D" parent="."]

[node name="navigationCam" parent="navigationCam" instance=ExtResource( 2 )]
position = Vector2( 50, 250 )
posMap = Vector2( 500, 0 )
nodeMap = NodePath("../../map")

[node name="navigationCam2" parent="navigationCam" instance=ExtResource( 2 )]
position = Vector2( 450, 250 )
posMap = Vector2( -500, 0 )
nodeMap = NodePath("../../map")

[node name="Inventory" parent="navigationCam" instance=ExtResource( 5 )]

[connection signal="animation_finished" from="map/ColorRect/AnimationPlayer" to="map/ColorRect" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="map/navigation/door3/Timer" to="map/navigation/door3" method="_on_Timer_timeout"]
[connection signal="input_event" from="map/interaction/interactive" to="map/interaction/interactive" method="_on_interactive_input_event"]
[connection signal="timeout" from="map/interaction/ComputerTwo/Computer/RichTextLabel2/Timer" to="map/interaction/ComputerTwo" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="map/interaction/ComputerTwo/Computer/load/ColorRect/AnimationPlayer" to="map/interaction/ComputerTwo" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="map/interaction/ComputerTwo/Computer/load/ColorRect2/AnimationPlayer2" to="map/interaction/ComputerTwo" method="_on_AnimationPlayer2_animation_finished"]
[connection signal="animation_finished" from="map/interaction/ComputerTwo/Computer/load/ColorRect3/AnimationPlayer3" to="map/interaction/ComputerTwo" method="_on_AnimationPlayer3_animation_finished"]
[connection signal="animation_finished" from="map/interaction/ComputerTwo/Computer/load/ColorRect4/AnimationPlayer4" to="map/interaction/ComputerTwo" method="_on_AnimationPlayer4_animation_finished"]
[connection signal="area_entered" from="map/interaction/ComputerTwo/slots/slot" to="map/interaction/ComputerTwo" method="_on_slot_area_entered"]
[connection signal="area_entered" from="map/interaction/ComputerTwo/slots/slot2" to="map/interaction/ComputerTwo" method="_on_slot2_area_entered"]
[connection signal="area_entered" from="map/interaction/ComputerTwo/slots/slot3" to="map/interaction/ComputerTwo" method="_on_slot3_area_entered"]
[connection signal="area_entered" from="map/interaction/ComputerTwo/slots/slot4" to="map/interaction/ComputerTwo" method="_on_slot4_area_entered"]
